[gd_scene load_steps=2 format=3 uid="uid://c00l57lcrs05e"]

[ext_resource type="Script" uid="uid://cwufa4v0j8ybk" path="res://src/hud.gd" id="1_6xhvv"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6xhvv")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -40.0
offset_right = 124.0
offset_bottom = -6.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Score: 99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -40.0
offset_right = -18.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "High Score: 99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -11.5
offset_right = 54.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "MessageLabel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabelTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="MessageLabelTimer" to="." method="_on_message_label_timer_timeout"]
